# EdgeXFoundry-device-service

./: CMakeLists.txt  README.md  buid.sh  custom-device.c  custom-device.h  relay_device_driver.c  relay_device_driver.h  temperature_device_driver.c  temperature_device_driver.h  模板设备配置文件.yml
device_driver/: CMakeLists.txt  device_driver_auto_event.c  device_driver_auto_event.h  device_driver_cfg.c  device_driver_cfg.h  device_driver_event_db.c  device_driver_event_db.h  device_driver_list.c  device_driver_list.h  device_driver_list_config.h  device_driver_modbus_proto.c  device_driver_modbus_proto.h  device_driver_mqtt_proto.c  device_driver_mqtt_proto.h  device_driver_opt.c  device_driver_opt.h  device_driver_parse_par.c  device_driver_parse_par.h  device_driver_port.c  device_driver_port.h  device_driver_private_proto.c  device_driver_private_proto.h  device_driver_update.c  device_driver_update.h  gateway_device.c  gateway_device.h  relay_device.c  relay_device.h  relay_device_driver.c  relay_device_driver.h  temperature_device.c  temperature_device.h  temperature_device_driver.c  temperature_device_driver.h
devices_service/: CMakeLists.txt  main_device_service.c  main_device_service.h
res/: Gyro.yaml  configuration.toml  modbus-temperature-device-profile.yaml  mqtt-gateway-device-profile.yaml
service_component/: CMakeLists.txt  custom-com-circularqueue.c  custom-com-circularqueue.h  custom-common-circularqueue.c  custom-common-circularqueue.h  custom-common-crc.c  custom-common-crc.h  custom-common-epoll.c  custom-common-epoll.h  custom-common-file.c  custom-common-file.h  custom-common-listen-list.c  custom-common-listen-list.h  custom-common-utilities.c  custom-common-utilities.h  custom-common.c  custom-common.h
service_component/3third_party/libuv/: CMakeLists.txt
service_component/3third_party/libuv/include/uv/: unix.h
service_component/3third_party/tomlc99/: toml_cat.c  toml_json.c  toml_utilities.h
tool/: file2base64.c
